3822B1FI1/2_gelu_cuda/suvorov_dmitrii/log.txt
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/suvorov_dmitrii/gelu_cuda.cu(27): error: namespace "std" has no member "cerr"
      std::cerr << "CUDA memory allocation error for input: " << cudaGetErrorString(err) << std::endl;
           ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/suvorov_dmitrii/gelu_cuda.cu(27): error: namespace "std" has no member "endl"
      std::cerr << "CUDA memory allocation error for input: " << cudaGetErrorString(err) << std::endl;
                                                                                                 ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/suvorov_dmitrii/gelu_cuda.cu(33): error: namespace "std" has no member "cerr"
      std::cerr << "CUDA memory allocation error for output: " << cudaGetErrorString(err) << std::endl;
           ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/suvorov_dmitrii/gelu_cuda.cu(33): error: namespace "std" has no member "endl"
      std::cerr << "CUDA memory allocation error for output: " << cudaGetErrorString(err) << std::endl;
                                                                                                  ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/suvorov_dmitrii/gelu_cuda.cu(40): error: namespace "std" has no member "cerr"
      std::cerr << "CUDA memory copy error (Host to Device): " << cudaGetErrorString(err) << std::endl;
           ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/suvorov_dmitrii/gelu_cuda.cu(40): error: namespace "std" has no member "endl"
      std::cerr << "CUDA memory copy error (Host to Device): " << cudaGetErrorString(err) << std::endl;
                                                                                                  ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/suvorov_dmitrii/gelu_cuda.cu(53): error: namespace "std" has no member "cerr"
      std::cerr << "CUDA kernel launch error: " << cudaGetErrorString(err) << std::endl;
           ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/suvorov_dmitrii/gelu_cuda.cu(53): error: namespace "std" has no member "endl"
      std::cerr << "CUDA kernel launch error: " << cudaGetErrorString(err) << std::endl;
                                                                                   ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/suvorov_dmitrii/gelu_cuda.cu(61): error: namespace "std" has no member "cerr"
      std::cerr << "CUDA memory copy error (Device to Host): " << cudaGetErrorString(err) << std::endl;
           ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/suvorov_dmitrii/gelu_cuda.cu(61): error: namespace "std" has no member "endl"
      std::cerr << "CUDA memory copy error (Device to Host): " << cudaGetErrorString(err) << std::endl;
                                                                                                  ^

10 errors detected in the compilation of "/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/suvorov_dmitrii/gelu_cuda.cu".
